Completed M&M and started Team section

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -55,4 +55,18 @@
 	body {
 		@apply bg-background text-foreground;
 	}
+	@font-face {
+		font-family: 'Quiapo Free';
+		font-style: normal;
+		font-weight: 400;
+		font-display: swap;
+		src: url(/src/lib/assets/Quiapo_Free.otf) format('opentype');
+	}
+	@font-face {
+		font-family: 'Cubao Free Expanded';
+		font-style: normal;
+		font-weight: 400;
+		font-display: swap;
+		src: url(/src/lib/assets/CubaoFree2-Expanded.ttf) format('truetype');
+	}
 }
