Almost complete. TODO: About Team page and Footer (optional)

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -60,7 +60,7 @@
 		font-style: normal;
 		font-weight: 400;
 		font-display: swap;
-		src: url(/src/lib/assets/Quiapo_Free.otf) format('opentype');
+		src: url(/src/lib/assets/QuiapoFree2-Regular.otf) format('opentype');
 	}
 	@font-face {
 		font-family: 'Cubao Free Expanded';
@@ -68,5 +68,8 @@
 		font-weight: 400;
 		font-display: swap;
 		src: url(/src/lib/assets/CubaoFree2-Expanded.ttf) format('truetype');
+	}
+	html {
+		scroll-behavior: smooth;
 	}
 }
